--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-react-calendars": "^20.1.47",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "create-react-class": "^15.7.0",
+    "rc-time-picker": "^3.7.3",
     "react": "^18.0.0",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-calendar": "^3.7.0",
+    "react-datetime-picker": "^3.5.0",
+    "react-digital-clock": "^0.1.2",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
