--- a/package.json
+++ b/package.json
@@ -2,12 +2,24 @@
   "name": "doit",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "node ../Backend/server.js"
+  },
   "dependencies": {
     "@syncfusion/ej2-react-calendars": "^20.1.47",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "create-react-class": "^15.7.0",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "firebase-admin": "^10.0.2",
+    "firebase-tools": "^11.9.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.3",
+    "path": "^0.12.7",
     "rc-time-picker": "^3.7.3",
     "react": "^18.0.0",
     "react-bootstrap-date-picker": "^5.1.0",
@@ -15,6 +27,7 @@
     "react-datetime-picker": "^3.5.0",
     "react-digital-clock": "^0.1.2",
     "react-dom": "^18.0.0",
+    "react-native-web": "^0.17.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
