--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ../Backend/server.js"
+    "start": "node ../Backend/server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "@syncfusion/ej2-react-calendars": "^20.1.47",
@@ -31,6 +32,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
+  },
+  "engines": {
+    "node": "v18.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
