--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ../Backend/server.js",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd src && npm install && npm run build"
   },
   "dependencies": {
     "@syncfusion/ej2-react-calendars": "^20.1.47",
