--- a/package.json
+++ b/package.json
@@ -3,26 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.6",
     "@syncfusion/ej2-react-calendars": "^20.1.47",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "create-react-class": "^15.7.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
     "firebase-tools": "^11.9.0",
+    "google-dictionary-api": "^1.0.8",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
+    "nodemon": "^2.0.20",
     "path": "^0.12.7",
-    "rc-time-picker": "^3.7.3",
     "react": "^18.0.0",
-    "react-bootstrap-date-picker": "^5.1.0",
-    "react-calendar": "^3.7.0",
-    "react-datetime-picker": "^3.5.0",
-    "react-digital-clock": "^0.1.2",
     "react-dom": "^18.0.0",
     "react-native-web": "^0.17.7",
     "react-router-dom": "^6.3.0",
@@ -33,7 +37,7 @@
     "node": "v14.7.0"
   },
   "scripts": {
-    "start": "node Backend/server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -55,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@capacitor/cli": "^4.2.0"
   }
 }
