--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "node": "v14.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node Backend/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
