--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "create-react-class": "^15.7.0",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
@@ -31,13 +32,14 @@
     "react-native-web": "^0.17.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-switch": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "engines": {
     "node": "v14.7.0"
   },
   "scripts": {
-    "start": "node Backend/server.js",
+    "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
